# lab

solution/: CMakeLists.txt
solution/include/: bmp.h  image.h  io.h  read_status.h  utils.h  write_status.h
solution/src/: bmp.c  io.c  main.c  transformations.c  utils.c
